--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>activiti_learn_1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <activiti.version>5.18.0</activiti.version>
+        <activiti.version>5.19.0</activiti.version>
         <h2.version>1.3.172</h2.version>
         <groovy.version>2.4.15</groovy.version>
         <spring.version>4.0.6.RELEASE</spring.version>
@@ -29,6 +29,11 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
@@ -41,6 +46,11 @@
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-engine</artifactId>
+            <version>${activiti.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring</artifactId>
             <version>${activiti.version}</version>
         </dependency>
         <dependency>
@@ -97,17 +107,11 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
     </dependencies>
-    <repositories>
-        <repository>
-            <id>Activiti</id>
-            <url>http://maven.alfresco.com/nexus/content/repositories/activti</url>
-        </repository>
-    </repositories>
-    
 </project>
